[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "map_data_tools"
version = "0.1.0"
description = "Some tools for working with the orchard map data for the particle filter localization system and related projects."
readme = "README.md"
authors = [{name = "Jostan Brown", email = "your.email@example.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]